# praHangine

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
app/: App.cpp  App.h  CMakeLists.txt  main.cpp  sandbox.cpp
data/: Cube.PR4  cube.PR4  fps_test.PR4  rotated_spot2.PR4
data/shaders/: fragment.glsl  vertex.glsl
docs/: PR4_FORMAT.md  PROJECT_STRUCTURE.md
include/prahangine/: config.h  utils.h
include/prahangine/camera/: Camera.h
include/prahangine/input/: callback.h
include/prahangine/math/: Matrix.h  Transform.h  Vec.h
include/prahangine/pr4/: AssetSystem.h  errors.h  types.h
include/prahangine/render/: Renderer.h  shaders.h
include/prahangine/scene/: types.h
sandbox/: CMakeLists.txt  main
src/: CMakeLists.txt  config.cpp  prahangine  prahangine.cpp
src/camera/: Camera.cpp
src/input/: callback.cpp
src/math/: Matrix.cpp  Vec.cpp
src/pr4/: AssetSystem.cpp
src/render/: Renderer.cpp  shaders.cpp
src/scene/: SceneAnimation.cpp
src/utils/: createCube.cpp
tests/: CMakeLists.txt  placeholder_tests.cpp
tests/assets/: PR4_asset_tests.cpp
tests/math/: Matrix.cpp  Matrix_tests.cpp  Vec_tests.cpp  placeholder.cpp
